--- a/public/global.css
+++ b/public/global.css
@@ -1,71 +1,35 @@
 @import url("https://fonts.googleapis.com/css?family=Lato|Roboto+Slab");
 
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   position: relative;
   width: 100%;
   height: 100%;
-  background-color: rgb(243, 243, 243);
+  font-family: "Lato", sans-serif;
 }
 
 body {
-  color: #333;
+  color: #1d2930;
   margin: 0;
-  padding: 8px;
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  padding: 0;
+  background: #f0f3f5;
 }
 
-a {
-  color: rgb(0, 100, 200);
-  text-decoration: none;
+::-webkit-scrollbar {
+  width: 12px; /* width of the entire scrollbar */
+  overflow: auto;
 }
 
-a:hover {
-  text-decoration: underline;
+::-webkit-scrollbar-track {
+  background: #f0f3f5; /* color of the tracking area */
 }
 
-a:visited {
-  color: rgb(0, 80, 160);
-}
-
-label {
-  display: block;
-}
-
-input,
-button,
-select,
-textarea {
-  font-family: inherit;
-  font-size: inherit;
-  -webkit-padding: 0.4em 0;
-  padding: 0.4em;
-  margin: 0 0 0.5em 0;
-  box-sizing: border-box;
-  border: 1px solid #ccc;
-  border-radius: 2px;
-}
-
-input:disabled {
-  color: #ccc;
-}
-
-button {
-  color: #333;
-  background-color: #f4f4f4;
-  outline: none;
-}
-
-button:disabled {
-  color: #999;
-}
-
-button:not(:disabled):active {
-  background-color: #ddd;
-}
-
-button:focus {
-  border-color: #666;
+::-webkit-scrollbar-thumb {
+  background-color: #607d8b; /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+  border: 3px solid #f0f3f5; /* creates padding around scroll thumb */
 }
